--- a/ui/index.html
+++ b/ui/index.html
@@ -9,7 +9,7 @@
       enctype="multipart/form-data"
     >
       <label for="file">File:</label><br />
-      <input type="file" id="file" name="file" /><br />
+      <input type="file" id="file" name="file" accept=".pdf" /><br />
       <label for="model_name">Model Name:</label><br />
       <input type="text" id="model_name" name="model_name" /><br />
       <label for="json_schema">JSON Schema:</label><br />
